# qpid-cpp

./: .asf.yaml  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Containerfile  INSTALL.txt  NOTICE.txt  README.md  RELEASE.md  VERSION.txt  appveyor.yml
.github/workflows/: build.yml  codeql.yml
CMakeModules/: FindProton.cmake
bindings/: CMakeLists.txt
docs/: linearstore-partition-upgrade-procedure.txt
docs/book/: Makefile
docs/man/: CMakeLists.txt  generate-manpages.sh  qmf-gen.1  qmf-gen.x  qpid-config.1  qpid-config.x  qpid-ha.1  qpid-ha.x  qpid-printevents.1  qpid-printevents.x  qpid-queue-stats.1  qpid-queue-stats.x  qpid-receive.1  qpid-receive.x  qpid-route.1  qpid-route.x  qpid-send.1  qpid-send.x  qpid-stat.1  qpid-stat.x  qpid-tool.1  qpid-tool.x  qpidd.1  qpidd.x
etc/: CMakeLists.txt
etc/fedora/: qpidd-primary.service  qpidd.service
examples/: CMakeLists.txt
examples/messaging/: spout.cpp
include/qpid/: swig_python_typemaps.i
management/python/: NOTICE.txt  setup.py  test.sh
managementgen/: CMakeLists.txt  qmf-gen
managementgen/qmfgen/: generate.py  schema.py
src/: CMakeLists.txt  QpidConfig.cmake.in  amqp.cmake  legacystore.cmake  msvc.cmake
src/qpid/: InlineVector.h  SaslFactory.cpp
src/tests/: .valgrind.supp  AclHost.cpp  CMakeLists.txt  MessagingSessionTests.cpp  QueueRegistryTest.cpp  brokertest.py  check_dependencies.py.in  env.py.in  qmf_client_tests.py  qpid-client-test.cpp  qpid-perftest.cpp  qpid-receive.cpp  qpid-send.cpp  qpid-txtest.cpp  qpid-txtest2.cpp  run_qmf_client_tests  run_ssl_tests  txshift.cpp
(+141 files in other folders)
